--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -13,3 +13,15 @@ validation.count.diap=Count must be greater then zero
 validation.id-purchase.nullable=id purchase must be present
 validation.fact-price.diap=fact price must be positive or zero
 validation.status.nullable=status can't be null
+message.badCredentials=Bad creditionals
+auth.message.blocked=Locked by attempts count
+error.invalid-criteria=invalid search options
+validation.id-purchase.nullable=id purchase can't be empty
+validation.id-schedule.nullable=id schedule can't be empty
+error.unauthorized=not logined
+error.purchase.not-found=purchase not found
+error.schedule.not-found=schedule not found
+error.user.not-found=user not found
+error.user-exists=user already exists
+validation.period.not-null=period cant be null
+validation.start-date.not-null=start date cant be null
